--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,23 +12,33 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RemoteApplication"
         tools:targetApi="31">
+
         <activity
             android:name=".MainUserLogin"
             android:exported="false" />
+
         <activity
-            android:name=".UserPage"
+            android:name=".TaskManager"
             android:exported="false"
             android:label="@string/title_activity_main_login"
             android:theme="@style/Theme.RemoteApplication" />
+
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true" />
+
+        <activity
+            android:name=".LandpageActivity"
+            android:exported="true"
+            android:theme="@style/Theme.RemoteApplication">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ScheduleTaskActivity" />
+        <activity android:name=".AssignTaskActivity" />
+
 
         <meta-data
             android:name="preloaded_fonts"
