Added SignUp page and orgainized the intents

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
         </activity>
         <activity android:name=".ScheduleTaskActivity" />
         <activity android:name=".AssignTaskActivity" />
+        <activity android:name=".RegisterActivity" />
 
 
         <meta-data
