--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.RemoteApplication"
         tools:targetApi="31">
         <activity
+            android:name=".Adminnotifications"
+            android:exported="false" />
+        <activity
+            android:name=".Adminprofile"
+            android:exported="false" />
+        <activity
             android:name=".Adminreports"
             android:exported="false" />
         <activity
